{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 43,
  "lineage": "2f992377-71aa-0393-81a7-dba7effe271f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:internet-gateway/igw-0f84a7b98288ec859",
            "id": "igw-0f84a7b98288ec859",
            "owner_id": "403277717302",
            "tags": {
              "Name": "genai-devops-eks-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-igw",
              "Project": "genai-devops-eks"
            },
            "vpc_id": "vpc-0b6a5d5d7041908a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f84a7b98288ec859",
            "id": "r-rtb-0aea693d23b5f493b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aea693d23b5f493b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:route-table/rtb-07824ed3637e8f642",
            "id": "rtb-07824ed3637e8f642",
            "owner_id": "403277717302",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "genai-devops-eks-private-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-private-rt",
              "Project": "genai-devops-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6a5d5d7041908a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:route-table/rtb-0aea693d23b5f493b",
            "id": "rtb-0aea693d23b5f493b",
            "owner_id": "403277717302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f84a7b98288ec859",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "genai-devops-eks-public-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-public-rt",
              "Project": "genai-devops-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6a5d5d7041908a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04397bdd672318d1d",
            "route_table_id": "rtb-07824ed3637e8f642",
            "subnet_id": "subnet-0ed8d7f6e297def40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9659fa44bad1d00",
            "route_table_id": "rtb-07824ed3637e8f642",
            "subnet_id": "subnet-0b952259b3ec1fb6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e8cf2b5d5f52745",
            "route_table_id": "rtb-0aea693d23b5f493b",
            "subnet_id": "subnet-087690da124906976"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07268c1992338e12d",
            "route_table_id": "rtb-0aea693d23b5f493b",
            "subnet_id": "subnet-0aa8488d473360d9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:security-group/sg-0a1a1f1159f09a2e6",
            "description": "Control plane communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1a1f1159f09a2e6",
            "ingress": [],
            "name": "genai-devops-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "403277717302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "genai-devops-eks-cluster-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-cluster-sg",
              "Project": "genai-devops-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6a5d5d7041908a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:subnet/subnet-0ed8d7f6e297def40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed8d7f6e297def40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "403277717302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "genai-devops-eks-private-0",
              "kubernetes.io/cluster/genai-devops-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-private-0",
              "Project": "genai-devops-eks",
              "kubernetes.io/cluster/genai-devops-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b6a5d5d7041908a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:subnet/subnet-0b952259b3ec1fb6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b952259b3ec1fb6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "403277717302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "genai-devops-eks-private-1",
              "kubernetes.io/cluster/genai-devops-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-private-1",
              "Project": "genai-devops-eks",
              "kubernetes.io/cluster/genai-devops-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b6a5d5d7041908a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:subnet/subnet-087690da124906976",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087690da124906976",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403277717302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "genai-devops-eks-public-0",
              "kubernetes.io/cluster/genai-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-public-0",
              "Project": "genai-devops-eks",
              "kubernetes.io/cluster/genai-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b6a5d5d7041908a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:subnet/subnet-0aa8488d473360d9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa8488d473360d9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403277717302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "genai-devops-eks-public-1",
              "kubernetes.io/cluster/genai-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-public-1",
              "Project": "genai-devops-eks",
              "kubernetes.io/cluster/genai-devops-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b6a5d5d7041908a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403277717302:vpc/vpc-0b6a5d5d7041908a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0bfa94bd7c64d85e4",
            "default_route_table_id": "rtb-0e968d017da4b8958",
            "default_security_group_id": "sg-076cb234860b44fce",
            "dhcp_options_id": "dopt-0448a2caa4dd640a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b6a5d5d7041908a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e968d017da4b8958",
            "owner_id": "403277717302",
            "tags": {
              "Name": "genai-devops-eks-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "genai-devops-eks-vpc",
              "Project": "genai-devops-eks"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}